--- a/frontend-deployment.yaml
+++ b/frontend-deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: frontend-deployment
+  namespace: scd-project
 spec:
   replicas: 2
   selector:
@@ -14,6 +15,6 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: aahs/frontend:latest  # Replace with the correct image name here
+          image: aahs/frontend:latest  # Make sure this image has updated NGINX config
           ports:
             - containerPort: 80
