--- a/service.yaml
+++ b/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: backend-service
+  name: backend
 spec:
   type: NodePort
   selector:
     app: backend
   ports:
-    - port: 80
+    - port: 5000
       targetPort: 5000
-      nodePort: 30007
+      nodePort: 30001
