Add GitHub Actions workflowsssss-00

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,8 @@ jobs:
     - name: Set up Docker to use Minikube's environment
       shell: powershell
       run: |
-        & minikube -p minikube docker-env --shell=cmd | Invoke-Expression
+       & minikube -p minikube docker-env --shell=powershell | Invoke-Expression
+
 
     - name: Build frontend Docker image
       run: docker build -t aahs/frontend:latest ./inotebook
